2012-11-14  Shinya Kawanaka  <shinyak@chromium.org>

        Changing pseudoClass (:target) should cause distribution
        https://bugs.webkit.org/show_bug.cgi?id=101699

        Reviewed by Hajime Morita.

        * fast/dom/shadow/pseudoclass-update-target-expected.html: Added.
        * fast/dom/shadow/pseudoclass-update-target.html: Added.

2012-11-14  Dominik Röttsches  <dominik.rottsches@intel.com>

        [EFL] Unreviewed gardening.

        Mark two failures after r134456.

        * platform/efl/TestExpectations:

2012-11-14  Kent Tamura  <tkent@chromium.org>

        Support for localization tests of calendar picker
        https://bugs.webkit.org/show_bug.cgi?id=102181

        Reviewed by Kentaro Hara.

        * platform/chromium-mac/platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-ru-expected.png: Added.
        * platform/chromium/TestExpectations:
        * platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-ru-expected.txt: Added.
        * platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-ru.html: Added.

2012-11-14  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Moving some expectations into a more proper section while
        merging the others.

        * platform/gtk/TestExpectations:

2012-11-14  Mihnea Ovidenie  <mihnea@adobe.com>

        After r134205 was rolled out in http://trac.webkit.org/changeset/134425,
        we have to re-enable the skipped tests that were failing because of r134205.
        https://bugs.webkit.org/show_bug.cgi?id=102090

        Reviewed by Adam Barth.

        The initial rollout for r134205 and the related r134226, r134419 failed.

        * platform/chromium/TestExpectations:
        * platform/qt/TestExpectations:

2012-11-13  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Expanding failure expectations for the inspector/debugger/live-edit.html test.